Use 'installed-base' virtual package dependency instead of explicit 'base-installer' one
To allow a better flexibility regarting the way of installer does the
system installation a new virtual package called
'installed-base'. base-installer package has been change to provide
this new virtual package and the other packages depending on it has
also been change.

The affected package are:

 - aboot-installer
 - apt-setup
 - colo-installer
 - elilo-installer
 - finish-install
 - flash-kernel
 - nobootloader
 - palo-installer
 - sibyl-installer
 - silo-installer
 - zipl-installer

r47285

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.19) UNRELEASED; urgency=low
+
+  * Do not depends of a specific base-installer version so we can provide
+    an alternative module for it.
+
+ -- Otavio Salvador <otavio@debian.org>  Sat, 16 Jun 2007 17:33:19 -0300
+
 nobootloader (1.18) unstable; urgency=low
 
   [ Colin Watson ]
