--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-nobootloader (1.19) UNRELEASED; urgency=low
+nobootloader (1.19) unstable; urgency=low
 
+  [ Otavio Salvador ]
   * Do not depends of a specific base-installer version so we can provide
     an alternative module for it.
 
- -- Otavio Salvador <otavio@debian.org>  Sat, 16 Jun 2007 17:33:19 -0300
+  [ Updated translations ]
+  * Basque (eu.po) by Piarres Beobide
+  * Romanian (ro.po) by Eddy Petrișor
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Jun 2007 22:16:52 +0100
 
 nobootloader (1.18) unstable; urgency=low
 
