--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -12,7 +12,7 @@
 # Quazi Ashfaq-ur Rahman <quazi.ashfaq@gmail.com>, 2005.
 # Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005, 2006.
 # Progga <progga@BengaLinux.Org>, 2005, 2006.
-# Jamil Ahmed <jamil@bengalinux.org>, 2006.
+# Jamil Ahmed <jamil@bengalinux.org>, 2006-2007.
 # Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>, 2007.
 #
 msgid ""
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-03-14 00:50+0600\n"
-"Last-Translator: Mahay Alam Khan (মাহে আলম) <mahayalamkhan@gmail.com>\n"
+"PO-Revision-Date: 2007-07-22 23:44+0600\n"
+"Last-Translator: Jamil Ahmed <jamil@bengalinux.org>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,8 +68,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "আপনার সিস্টেমটি যেন স্বয়ংক্রিয়ভাবে লিনাক্সকে বুট করে, সেজন্য জেনেসি ফার্মওয়্যারের "
-"কিছু চলকের মান ক্রমানুসারে নির্ধারণ করা প্রয়োজন।  ইনস্টলেশন শেষ হওয়ার পর সিস্টেমটি "
-"রিবুট হবে।  স্বয়ংক্রিয়ভাবে বুট করার প্রক্রিয়া সচল করার জন্য ফার্মওয়্যার প্রম্পটে পরবর্তী "
+"কিছু চলকের মান ক্রমানুসারে নির্ধারণ করা প্রয়োজন। ইনস্টলেশন শেষ হওয়ার পর সিস্টেমটি "
+"রিবুট হবে। স্বয়ংক্রিয়ভাবে বুট করার প্রক্রিয়া সচল করার জন্য ফার্মওয়্যার প্রম্পটে পরবর্তী "
 "চলকগুলোকে সক্রিয় করুন:"
 
 #. Type: note
@@ -98,11 +98,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "আপনার সিস্টেমটি যেন স্বয়ংক্রিয়ভাবে লিনাক্সকে বুট করতে পারে সেজন্য নেটউইন্ডার "
-"NeTTrom ফার্মওয়্যারে কিছু চলকের মান নির্ধারণ করতে হবে।  ইনস্টলেশন শেষ হওয়ার পর "
-"সিস্টেমটি রিবুট হবে, এবং ফার্মওয়্যারটি সিস্টেমকে স্বয়ংক্রিয়ভাবে বুট করার চেষ্টা "
-"করবে।  এই প্রক্রিয়া বন্ধ করার জন্য আপনি যেকোন কী (key) চাপতে পারেন।  এর ফলে আপনি "
-"NeTTrom কমান্ড সিস্টেমে নিজেকে আবিষ্কার করবেন।  সেখানে আপনাকে এই কমান্ডগুলো "
-"চালাতে হবে:"
+"NeTTrom ফার্মওয়্যারে কিছু চলকের মান নির্ধারণ করতে হবে। ইনস্টলেশন শেষ হওয়ার পর "
+"সিস্টেমটি রিবুট হবে, এবং ফার্মওয়্যারটি সিস্টেমকে স্বয়ংক্রিয়ভাবে বুট করার চেষ্টা করবে। "
+"এই প্রক্রিয়া বন্ধ করার জন্য আপনি যেকোন কী (key) চাপতে পারেন। এর ফলে আপনি NeTTrom "
+"কমান্ড সিস্টেমে নিজেকে আবিষ্কার করবেন। সেখানে আপনাকে এই কমান্ডগুলো চালাতে হবে:"
 
 #. Type: note
 #. Description
@@ -111,7 +110,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"আপনাকে এটি কেবল একবারই করতে হবে।  এরপর, \"boot\" কমান্ড লিখুন অথবা আপনার নতুন "
+"আপনাকে এটি কেবল একবারই করতে হবে। এরপর, \"boot\" কমান্ড লিখুন অথবা আপনার নতুন "
 "ইনস্টল করা সিস্টেমে জন্য রিবুট করুন।"
 
 #. Type: note
