--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-27 14:39+0100\n"
+"PO-Revision-Date: 2007-08-31 00:42+0200\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -75,7 +75,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Alcune variabili vanno impostate nel firmware Genesi per poter avviare il "
-"sistema in automatico. Al termine della installazione il sistema verrà "
+"sistema in automatico. Al termine dell'installazione il sistema verrà "
 "riavviato. Al prompt del firmware le seguenti variabili dovranno essere "
 "impostate per permettere l'avvio automatico:"
 
@@ -86,8 +86,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Diversamente sarà possibile avviare il kernel a mano scrivendo, al prompt di "
-"boot del firmware:"
+"Diversamente, sarà possibile avviare il kernel a mano scrivendo, al prompt "
+"di boot del firmware:"
 
 #. Type: note
 #. Description
