--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-02-18 01:14-0200\n"
-"Last-Translator: Felipe Augusto van de Wiel (faw) <faw@cathedrallabs.org>\n"
+"PO-Revision-Date: 2007-09-07 02:24-0300\n"
+"Last-Translator: Felipe Augusto van de Wiel (faw) <faw@debian.org>\n"
 "Language-Team: l10n portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgid ""
 msgstr ""
 "Algumas variáveis precisam ser definidas no firmware Genesi para que seu "
 "sistema possa ser capaz de ser iniciado automaticamente. Ao final da "
-"instalação, o sistema irá reiniciar. No prompt de comandos do firmware, "
+"instalação, o sistema irá reinicializar. No prompt de comandos do firmware, "
 "defina as seguintes variáveis do firmware para habilitar a inicialização "
 "automática:"
 
@@ -93,8 +93,8 @@ msgid ""
 msgstr ""
 "Algumas variáveis precisam ser definidas no firmware Netwinder NeTTrom para "
 "que seu sistema possa ser capaz de ser iniciado automaticamente. Ao final "
-"deste estágio da instalação, o sistema irá reiniciar e o firmware irá tentar "
-"iniciar automaticamente. Você pode abortar esse processo pressionando "
+"deste estágio da instalação, o sistema irá reinicializar e o firmware irá "
+"tentar iniciar automaticamente. Você pode abortar esse processo pressionando "
 "qualquer tecla. Ao fazê-lo, você será levado ao sistema de comandos NeTTrom, "
 "onde você precisa executar os seguintes comandos:"
 
@@ -106,8 +106,8 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Você precisará fazer isto somente uma única vez. Após fazê-lo, informe o "
-"comando \"boot\" ou reinicie o sistema para prosseguir ao seu novo sistema "
-"instalado."
+"comando \"boot\" ou reinicialize o sistema para prosseguir ao seu novo "
+"sistema instalado."
 
 #. Type: note
 #. Description
