--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -14,11 +14,11 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-28 10:37+0100\n"
+"PO-Revision-Date: 2007-05-28 14:22+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-Bookmarks: 282,1006,1041,-1,-1,-1,-1,-1,-1,-1\n"
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Fortsæt uden opstartsindlæser"
+msgstr "FortsÃ¦t uden opstartsindlÃ¦ser"
 
 #. Type: error
 #. Description
@@ -41,19 +41,19 @@ msgstr "Kunne ikke montere /target/proc"
 #. Description
 #: ../nobootloader.templates:8
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Montering af proc-filsystemet på /target/proc mislykkedes."
+msgstr "Montering af proc-filsystemet pÃ¥ /target/proc mislykkedes."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr "Tjek /var/log/syslog eller kig på den virtuelle konsol 4 for detaljer."
+msgstr "Tjek /var/log/syslog eller kig pÃ¥ den virtuelle konsol 4 for detaljer."
 
 #. Type: error
 #. Description
 #: ../nobootloader.templates:8
 msgid "Warning: Your system may be unbootable!"
-msgstr "Advarsel: Dit system er måske ude af stand til at starte op!"
+msgstr "Advarsel: Dit system er mÃ¥ske ude af stand til at starte op!"
 
 #. Type: note
 #. Description
@@ -64,9 +64,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variabler i Genesi-firmwaren, for at dit system kan "
+"Der skal sÃ¦ttes nogle variabler i Genesi-firmwaren, for at dit system kan "
 "starte op automatisk. Ved afslutningen af installationen vil systemet "
-"genstarte. Sæt følgende OpenFirmware-variabler ved firmware-prompten for at "
+"genstarte. SÃ¦t fÃ¸lgende OpenFirmware-variabler ved firmware-prompten for at "
 "aktivere automatisk opstart:"
 
 #. Type: note
@@ -76,14 +76,14 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternativt vil du kunne starte kernen op manuelt ved at skrive følgende i "
+"Alternativt vil du kunne starte kernen op manuelt ved at skrive fÃ¸lgende i "
 "firmware-prompten:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:40
 msgid "Setting firmware variables for automatic boot"
-msgstr "Sætter firmware-variable til automatisk opstart"
+msgstr "SÃ¦tter firmware-variable til automatisk opstart"
 
 #. Type: note
 #. Description
@@ -95,11 +95,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Der skal sættes nogle variabler i Netwinder NeTTrom-firmwaren for at dit "
+"Der skal sÃ¦ttes nogle variabler i Netwinder NeTTrom-firmwaren for at dit "
 "system kan starte Linux op automatisk. Ved afslutningen af dette "
-"installationsstadium vil systemet genstarte, og firmwaren vil forsøge at "
-"genstarte automatisk. Du kan afbryde dette ved et tryk på en tast. Det vil "
-"føre dig til NeTTroms kommandosystem, hvor du skal udføre følgende "
+"installationsstadium vil systemet genstarte, og firmwaren vil forsÃ¸ge at "
+"genstarte automatisk. Du kan afbryde dette ved et tryk pÃ¥ en tast. Det vil "
+"fÃ¸re dig til NeTTroms kommandosystem, hvor du skal udfÃ¸re fÃ¸lgende "
 "kommandoer:"
 
 #. Type: note
@@ -109,14 +109,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Du behøver kun at gøre dette én gang. Giv derefter kommandoen \"boot\" eller "
-"genstart systemet for at gå videre til dit nyinstallerede system."
+"Du behÃ¸ver kun at gÃ¸re dette Ã©n gang. Giv derefter kommandoen \"boot\" eller "
+"genstart systemet for at gÃ¥ videre til dit nyinstallerede system."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:60
 msgid "No boot loader installed"
-msgstr "Ingen opstartsindlæser installeret"
+msgstr "Ingen opstartsindlÃ¦ser installeret"
 
 #. Type: note
 #. Description
@@ -125,9 +125,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Der er ikke installeret nogen opstartsindlæser. Enten fordi du har valgt "
-"ikke at gøre det, eller fordi din computers arkitektur endnu ikke "
-"understøtter en opstartsindlæser."
+"Der er ikke installeret nogen opstartsindlÃ¦ser. Enten fordi du har valgt "
+"ikke at gÃ¸re det, eller fordi din computers arkitektur endnu ikke "
+"understÃ¸tter en opstartsindlÃ¦ser."
 
 #. Type: note
 #. Description
@@ -136,5 +136,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
+"Du bliver nÃ¸dt til at starte op manuelt med ${KERNEL}-kernen pÃ¥ partitionen "
 "${BOOT} og give kommandoen ${ROOT} som kerneparameter."
