--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -11,22 +11,22 @@
 # in doc/i18n/i18n.txt#
 #
 # Andrei Darashenka <adorosh2@it.org.by>, 2005, 2006.
-# Pavel Piatruk <berserker@neolocation.com>, 2006.
+# Pavel Piatruk <berserker@neolocation.com>, 2006, 2007.
 # Nasciona Piatrouskaja <naska.pet@gmail.com>, 2006.
-# Hleb Rubanau <g.rubanau@gmail.com>, 2006.
+# Hleb Rubanau <g.rubanau@gmail.com>, 2006, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-15 11:16+0100\n"
+"PO-Revision-Date: 2007-10-15 11:16+0100\n"
 "Last-Translator: Hleb Rubanau <g.rubanau@gmail.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 0.10.1\n"
+"X-Generator: vim\n"
 
 #. Type: text
 #. Description
@@ -70,9 +70,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Варта вызначыць некаторыя параметры для прашыўкі Genesi, каб Вашая сістэма "
-"магла аўтаматычна загружацца. Напрыканцы ўстаноўкі сістэма перазагрузіцца. У "
-"абалонцы прашыўкі вызначце наступныя параметры, каб дазволіць аўтаматычную "
-"загрузку: "
+"магла аўтаматычна загружацца. Напрыканцы ўсталявання сістэма перазагрузіцца. "
+"У абалонцы прашыўкі прызначце наступныя параметры, каб дазволіць "
+"аўтаматычную загрузку: "
 
 #. Type: note
 #. Description
@@ -80,13 +80,15 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Як варыянт, Вы можаце загружаць ядро самастойна, уводзячы: "
+msgstr ""
+"Як варыянт, Вы можаце загружаць ядро самастойна, уводзячы ў камандным радку "
+"прашыўкі: "
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:40
 msgid "Setting firmware variables for automatic boot"
-msgstr "Наладка параметраў прашыўкі для аўтаматычнай загрузкі"
+msgstr "Прызначэнне параметраў прашыўкі для аўтаматычнай загрузкі"
 
 #. Type: note
 #. Description
@@ -99,7 +101,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Трэба вызначыць некаторыя параметры для прашыўкі Netwinder NeTTrom, каб "
-"Вашая сістэма магла аўтаматычна загружаць linux. Пасля заканчэння устаноўкі "
+"Вашая сістэма магла аўтаматычна загружаць linux. Напрыканцы ўсталявання "
 "сістэма перазагрузіцца, і прашыўка паспрабуе аўтазагрузку. Можна будзе "
 "прымусова спыніць гэты працэс, націснуўшы на любую клавішу. Тады Вы трапіце "
 "ў камандную абалонку NeTTrom, дзе можна будзе запусціць такія каманды:"
@@ -112,7 +114,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Вам трэба зрабіць гэта толькі аднойчы. Потым увядзіце каманду \"boot\" або "
-"іншым чынам перазагрузіце сістэму, каб пачаць працу з Debian. "
+"перазагрузіце станцыю, каб пачаць працу з новай сістэмай. "
 
 #. Type: note
 #. Description
