[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r49892

--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-04-29 17:20+0300\n"
+"PO-Revision-Date: 2007-10-26 02:25+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -122,7 +122,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Va trebui să faceți acest lucru doar o dată. După aceea, introduceți comanda "
-"\"boot\" sau reporniți sistemul pentru a continua în noul sistem instalat."
+"„boot” sau reporniți sistemul pentru a continua în noul sistem instalat."
 
 #. Type: note
 #. Description
