--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -6,15 +6,18 @@
 # Slovak messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-#
+# 
+# Peter Mann
+# Ivan Masár <helix84@centrum.sk>, 2007.
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-02-17 10:40+0100\n"
-"Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
-"Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
+"PO-Revision-Date: 2007-11-15 16:03+0100\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
+"Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -105,7 +108,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Stačí to urobiť len raz. Potom zadajte príkaz \"boot\" alebo reštartujte "
+"Stačí to urobiť len raz. Potom zadajte príkaz „boot“ alebo reštartujte "
 "systém, aby ste sa dostali do vášho nového nainštalovaného systému."
 
 #. Type: note
