[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r50412

--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-12-03 15:07-0800\n"
+"PO-Revision-Date: 2007-12-09 14:26-0800\n"
 "Last-Translator: Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>\n"
 "Language-Team: Swathanthra|സ്വതന്ത്ര Malayalam|മലയാളം Computing|കമ്പ്യൂട്ടിങ്ങ് <smc-"
 "discuss@googlegroups.com>\n"
@@ -84,7 +84,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:40
 msgid "Setting firmware variables for automatic boot"
-msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിക്കുന്നു"
+msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിയ്ക്കുന്നു"
 
 #. Type: note
 #. Description
@@ -125,7 +125,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റാള്‍ ചെയ്തില്ല, ഒരു പക്ഷേ വേണ്ടെന്ന് നിങ്ങള്‍ തിരഞ്ഞെടുത്തിരിക്കാം "
+"ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റാള്‍ ചെയ്തില്ല, ഒരു പക്ഷേ വേണ്ടെന്ന് നിങ്ങള്‍ തെരഞ്ഞെടുത്തിരിക്കാം "
 "അല്ലെങ്കില്‍ നിങ്ങളുടെ പ്രത്യേക വാസ്തുവിദ്യ ഒരു ബൂട്ട് ലോഡറിനെ ഇതു വരെ പിന്തുണക്കുന്നില്ല."
 
 #. Type: note
