[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r50500

--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-12-09 14:26-0800\n"
+"PO-Revision-Date: 2007-12-15 06:25-0800\n"
 "Last-Translator: Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>\n"
 "Language-Team: Swathanthra|സ്വതന്ത്ര Malayalam|മലയാളം Computing|കമ്പ്യൂട്ടിങ്ങ് <smc-"
 "discuss@googlegroups.com>\n"
@@ -78,7 +78,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി നല്‍കിയ് നിങ്ങള്‍ക്ക് ബൂട്ട് ചെയ്യാന്‍ കഴിയും:"
+"ഇതിനു പകരമായി ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ കെര്‍ണല്‍ മാന്വലായി നല്‍കിയ് നിങ്ങള്‍ക്കു് ബൂട്ട് ചെയ്യാന്‍ കഴിയും:"
 
 #. Type: note
 #. Description
@@ -97,9 +97,9 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "നിങ്ങളുടെ സിസ്റ്റം ലിനക്സ് സ്വയം ബൂട്ട് ചെയ്യാനായി Netwinder NeTTrom ഫേംവെയറില്‍ ചില "
-"വാരിയബിള്‍സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ട്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
-"ബൂട്ട് ചെയ്യാനായി ശ്രമിക്കുകയും ചെയ്യും. നിങ്ങള്‍ക്ക് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
-"അമര്‍ത്താം. നിങ്ങള്‍ NeTTrom ആജ്ഞാ സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്‍ക്ക് താഴെ പറയുന്ന ആജ്ഞകള്‍ "
+"വാരിയബിള്‍സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ടു്. ഇന്‍സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
+"ബൂട്ട് ചെയ്യാനായി ശ്രമിയ്ക്കുകയും ചെയ്യും. നിങ്ങള്‍ക്കു് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
+"അമര്‍ത്താം. നിങ്ങള്‍ NeTTrom ആജ്ഞാ സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്‍ക്കു് താഴെ പറയുന്ന ആജ്ഞകള്‍ "
 "പ്രവര്‍ത്തിപ്പിക്കേണ്ടതായി വരും:"
 
 #. Type: note
@@ -135,5 +135,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"നിങ്ങള്‍ക്ക് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്‍ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്‍ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
+"നിങ്ങള്‍ക്കു് ${BOOT} ഭാഗത്ത് ${KERNEL} കെര്‍ണലും ${ROOT} ഉം കെര്‍ണല്‍ ആര്‍ഗ്യുമെന്റ് ആയി കൊടുത്ത് "
 "മാന്വലായി ബൂട്ട് ചെയ്യേണ്ടി വരും."
