--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-22 22:49+0000\n"
-"PO-Revision-Date: 2007-01-29 20:58-0500\n"
-"Last-Translator: Sunjae park <darehanl@gmail.com>\n"
+"PO-Revision-Date: 2007-12-18 11:06+0900\n"
+"Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +25,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "부트 로더 없이 계속"
+msgstr "부트로더 없이 계속"
 
 #. Type: error
 #. Description
@@ -62,9 +62,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"시스템이 자동 부팅하도록 만드려면 Genesi 펌웨어에 변수 몇 개를 설정해야 합니"
-"다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. 펌웨어 프롬프트에서 다음 "
-"펌웨어 변수를 설정해서 자동 부팅을 켤 수 있습니다:"
+"Genesi 펌웨어에 변수 몇 개를 설정해야 시스템이 자동 부팅합니다. 설치가 다 끝"
+"나면 시스템이 다시 시작합니다. 펌웨어 프롬프트에서 다음 펌웨어 변수를 설정해"
+"서 자동 부팅을 켤 수 있습니다:"
 
 #. Type: note
 #. Description
@@ -73,7 +73,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"또한 펌웨어 프롬프트에서 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니"
+"또 펌웨어 프롬프트에서 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니"
 "다 :"
 
 #. Type: note
@@ -92,10 +92,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"리눅스로 자동 부팅하도록 만드려면  Netwinder NeTTrom 펌웨어의 변수 몇 개를 설"
-"정해야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. 이 때 펌웨어가"
-"자동 부팅을 시도할텐데, 아무 키를 눌러서 자동부팅을 중단시키십시오. 이 때 "
-"NeTTrom 명령 시스템에서 다음 명령을 실행하십시오:"
+"리눅스가 자동 부팅하도록 만드려면  Netwinder NeTTrom 펌웨어의 변수 몇 개를 설"
+"정해야 합니다. 설치가 다 끝나면 시스템이 다시 시작하고, 이 때 펌웨어가 자동 "
+"부팅을 시도할 것입니다. 아무 키나 누르면 자동 부팅을 중지할 수 있습니다. 이 "
+"때 NeTTrom 명령어 시스템에서 다음 명령을 실행하십시오:"
 
 #. Type: note
 #. Description
@@ -104,14 +104,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"이 작업을 한 번만 하면 됩니다.  그 다음에 \"boot\" 명령을 입력하거나 시스템"
-"을 다시 시작해서 방금 설치한 시스템으로 진행하십시오."
+"이 작업은 한 번만 하면 됩니다.  그 다음에 \"boot\" 명령을 입력하거나 시스템"
+"을 다시 시작해서 방금 설치한 시스템으로 들어가십시오."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:60
 msgid "No boot loader installed"
-msgstr "부트 로더를 설치하지 않았습니다"
+msgstr "부트로더를 설치하지 않았습니다"
 
 #. Type: note
 #. Description
@@ -120,8 +120,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"부트 로더를 설치하지 않았습니다. 설치하지 않았도록 선택했거나, 아키텍쳐가 부"
-"트 로더를 아직 지원하지 않기 때문일 것입니다."
+"부트로더를 설치하지 않았습니다. 설치하지 않았도록 선택했거나, 아키텍쳐가 부트"
+"로더를 아직 지원하지 않기 때문일 것입니다."
 
 #. Type: note
 #. Description
