* udev 117 merged all udev tools into a single binary called udevadm.   Check for this and use it instead of udevinfo if available.
r50547

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.20) UNRELEASED; urgency=low
+
+  * udev 117 merged all udev tools into a single binary called udevadm.
+    Check for this and use it instead of udevinfo if available.
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 20 Dec 2007 11:37:40 +0000
+
 nobootloader (1.19) unstable; urgency=low
 
   [ Otavio Salvador ]
