[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r50634

--- a/debian/po/am.po
+++ b/debian/po/am.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-23 22:48+0000\n"
-"PO-Revision-Date: 2007-12-21 00:59+0100\n"
+"PO-Revision-Date: 2007-12-26 07:18+0100\n"
 "Last-Translator: tegegne tefera <tefera@mekuria.com>\n"
 "Language-Team: Amharic\n"
 "MIME-Version: 1.0\n"
@@ -44,7 +44,7 @@ msgstr "/target/proc ን መጫን አልተሳካም"
 #. :sl4:
 #: ../nobootloader.templates:10
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr "የproc ፋይል ስርዓትን በ /target/proc መጫን አልተሳካም።"
 
 #. Type: error
 #. Description
@@ -127,7 +127,7 @@ msgstr "ምንም አስነሺ ፕሮግራም አልተተከለም"
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
+msgstr "ምንም የቡት ጫኝ አልተተካለም። ምክንያቱም ላለመትከል መርጠዋል ወይም አስሊዎ ቡት ጫኝን አይደግፍም።"
 
 #. Type: note
 #. Description
