--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -3,9 +3,8 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of fr.po to French
-# French messages for debian-installer.
-# Copyright (C) 2004 Software in the Public Interest, Inc.
+# translation of Debian Installer templates to French
+# Copyright (C) 2004-2007 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
 # Christian Perrier <bubulle@debian.org>, 2002-2004.
@@ -16,10 +15,10 @@
 # Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-23 22:48+0000\n"
-"PO-Revision-Date: 2007-02-12 20:02+0100\n"
+"PO-Revision-Date: 2007-12-14 11:31+0530\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -127,8 +126,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Cette opération ne doit être effectuée qu'une seule fois. Après cela, "
-"utilisez la commande « boot » ou redémarrez pour utiliser le système "
-"installé."
+"utilisez la commande « boot » ou redémarrez pour utiliser le système installé."
 
 #. Type: note
 #. Description
