--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -10,20 +10,20 @@
 # Knut Yrvin <knuty@skolelinux.no>, 2004.
 # Klaus Ade Johnstad <klaus@skolelinux.no>, 2004.
 # Axel Bojer <axelb@skolelinux.no>, 2004.
-# Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005.
+# Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005, 2007.
 # Bjørn Steensrud <bjornst@powertech.no>, 2004,2005, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-23 22:48+0000\n"
-"PO-Revision-Date: 2007-02-17 11:33+0100\n"
-"Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
+"PO-Revision-Date: 2007-12-17 07:21+0100\n"
+"Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: Emacs po-mode\n"
 
 #. Type: text
 #. Description
@@ -120,9 +120,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Du trenger bare gjøre dette én gang. Etterpå skriver du inn «boot»-"
-"kommandoen eller starter systemet på nytt for å få tilgang til det "
-"nyinstallerte systemet."
+"Du trenger bare gjøre dette én gang. Etterpå skriver du inn «boot»-kommandoen "
+"eller starter systemet på nytt for å få tilgang til det nyinstallerte "
+"systemet."
 
 #. Type: note
 #. Description
